--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-feed": "^1.0.3",
     "hexo-generator-index": "^0.1.2",
+    "hexo-generator-search": "^2.1.1",
     "hexo-generator-sitemap": "^1.0.1",
     "hexo-generator-tag": "^0.1.1",
     "hexo-renderer-ejs": "^0.1.0",
