--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 山不转水转
 subtitle:
-description: tommy's blog
+description: 分享web开发，全栈开发，自我提高，数据产品选购的原创文章
 author: 山不转水转
 language: zh-Hans
 timezone:
