hexo theme modify

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 山不转水转
-subtitle:
+subtitle: 不想成为架构师的程序员不是一个好程序员！
 description: 分享web开发，全栈开发，自我提高，数据产品选购的原创文章
 author: 山不转水转
 language: zh-Hans
