--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ category_map:
   - 编程语言
   - 学习笔记
   - 个人随笔
-  - 算法
+  - algorithm
   - 数据库
   - 设计模式
   - 网络协议
@@ -72,6 +72,7 @@ tag_map:
   - book
   - 数码产品
   - 认知提升
+  - 算法
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
